<resources>
    <string name="app_name">Muzei Music Extension</string>

    <string name="source_name">Music</string>

    <string name="source_description">Album artwork from your music library</string>

    <string name="title_settings">Settings</string>

    <string name="title_setup">Setup</string>

    <string name="pref_string_title_download_wifi_only">Download via WiFi only</string>

    <string name="pref_string_summary_download_wifi_only">Artwork will only be downloaded if a WiFi connection is available.</string>

    <string name="pref_string_title_notifications">Notification Access</string>

    <string name="pref_string_summary_notifications">Muzei Music Extension needs permission to access your notifications, in order to see which song is currently playing.</string>

    <string name="pref_string_title_default_artwork">Default artwork</string>

    <string name="pref_string_summary_default_artwork">Choose an image from your device, which will display when no music is playing.</string>

    <string name="pref_string_title_use_default_artwork">Use default artwork</string>

    <string name="pref_string_summary_use_default_artwork">If unchecked, the extension will always display the last album art, even if no music is playing.</string>

    <string name="slideOneTitle">Storage permissions</string>
    <string name="slideOneDescription">Muzei Music Extension requires read &amp; write access to external storage, in order to retrieve and save artwork images.</string>

    <string name="slideTwoTitle">Notification settings</string>
    <string name="slideTwoDescription">Muzei Music Extension works much better if it can listen for song changes. To do this, it needs to register as a notification listener. \n\nThis is required for many popular apps, including Spotify and Pandora.</string>

    <string name="settingsButton">Settings</string>

    <string name="closeButton">Close</string>

    <string name="notificationSettingsDialogTitle">Notification Settings</string>
    <string name="notificationSettingsDialogMessage">Muzei Music Extension is not enabled as a Notification Listener. This is required for listening to track changes for many popular apps, including Spotify and Pandora.</string>

</resources>
